Fix hamburger menu open on mobile safari

--- a/app/app/client/menu/menu.import.less
+++ b/app/app/client/menu/menu.import.less
@@ -54,6 +54,15 @@
 		font-size: 20px;
 	}
 
+	.hamburger-hitbox {
+		position: absolute;
+		z-index: 9999;
+		right: 0;
+		top: 0;
+		height: 100%;
+		width: 80px;
+	}
+
 	.hamburger {
 		@size: 50px;
 
